--- a/index.qmd
+++ b/index.qmd
@@ -26,8 +26,103 @@ Add project abstract here.
 
 ### Introduction
 
+For the second question we want to visualize any temporal trends in UFO sightings throughout the day. This visual representation will help identify peak hours and potential patterns associated with different times of the day.
+
 ### Approach
 
+Initially the dataset `ufo_sightings` was loaded from the "TidyTuesday" source using the `read.csv` function in R. The `date_time` column was verified to ensure if it is the correct data types.
+
+After that we've created a new variable undername `time_of_day` , upon extracting time from `date_time` variable we've created time bins morning_hours (6:00 AM - 11:59 AM), afternoon_hours(12:00 PM - 17:59 PM), evening_hours(18:00 PM - 21:59 PM), night_hours(22:00 PM - 5:59 AM). and analyzed sighting patterns within each bin.
+
+After that we've grouped the data for each bin and counted the number of ufo sightings and saved it in dataset under name \_\_\_\_\_\_\_\_.
+
+Then we've plotted the \_\_\_\_\_\_\_ dataset using horizontal bar chart with count of ufo_sightings at x-axis and different time bins at y-axis.
+
 ### Analysis
+
+```{r echo=FALSE, warning=FALSE, error=FALSE, message=FALSE, results='hide'}
+if(!require(pacman))
+  install.packages("pacman")
+
+pacman::p_load(tidyverse,
+               dplyr,
+               leaflet)
+```
+
+```{r echo=FALSE, warning=FALSE, error=FALSE, message=FALSE}
+```
+
+```{r}
+# Load necessary libraries
+library(tidyverse)
+
+#> Loading the Dataset 
+
+#> UFO_Sightings
+
+ufo_sightings <- readr::read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-06-25/ufo_sightings.csv", show_col_types = FALSE)
+
+#> Data Wrangling
+
+#> Exploring the data interactively
+#View(ufo_sightings)
+
+#Displaying first few entries of date_time column
+#head(ufo_sightings$date_time)
+
+#Displaying the data type of the date_time column
+#class(ufo_sightings$date_time)
+
+#> Finding Missing Data in date_time
+#sum(is.na(ufo_sightings$date_time))
+
+# Load the lubridate package
+library(lubridate)
+
+
+# converting character strings of date_time variable into a format that R can recognize and manipulate as date-time data.
+ufo_sightings$date_time <- as.POSIXct(ufo_sightings$date_time, format = "%m/%d/%Y %H:%M")
+
+# Extracting the hour component
+hour_of_day <- hour(ufo_sightings$date_time)
+
+# Define time ranges for each bin
+morning_hours <- 6:11
+afternoon_hours <- 12:17
+evening_hours <- 18:21
+night_hours <- c(22:23, 0:5)
+
+# Function to assign time bins
+assign_time_bin <- function(hour_of_day) {
+  if (hour_of_day %in% morning_hours) {
+    return("Morning")
+  } else if (hour_of_day %in% afternoon_hours) {
+    return("Afternoon")
+  } else if (hour_of_day %in% evening_hours) {
+    return("Evening")
+  } else {
+    return("Night")
+  }
+}
+
+# Create a new variable representing the time of day bins
+ufo_sightings$time_of_day <- sapply(hour_of_day, assign_time_bin)
+
+# Output the time_of_day variable
+#ufo_sightings$time_of_day
+
+# Displaying date_time and time_of_day variables of ufo_sightings dataframe side by side
+# View(ufo_sightings[, c("date_time", "time_of_day")])
+
+# Write the dataframe to a CSV file
+#write.csv(ufo_sightings, "ufo_sightings_with_time_of_day.csv", row.names = FALSE)
+
+#finding out the current working directory in R to get the ufo_sightings_with_time_of_day.csv dataframe
+#getwd()
+
+
+
+
+```
 
 ### Discussion
