--- a/about.qmd
+++ b/about.qmd
@@ -4,12 +4,16 @@ format: html
 editor: visual
 ---
 
-This project was developed by **\[Team Name\]** For [INFO 526 - Data Analysis and Visualization](https://datavizaz.org/) at the University of Arizona, taught by Dr. Greg Chism. The team is comprised of the following team members.
+This project was developed by **Plotcrafters** For [INFO 526 - Data Analysis and Visualization](https://datavizaz.org/) at the University of Arizona, taught by Dr. Greg Chism. The team is comprised of the following team members.
 
--   Team member 1: One sentence description of Team member 1 (e.g., year, major, etc.).
+-   Alexander Berliner: Graduate student in statistics and data science.
 
--   Team member 2: One sentence description of Team member 2 (e.g., year, major, etc.).
+-   Ajay Kumar: Graduate student in data science.
 
--   Team member 3: One sentence description of Team member 3 (e.g., year, major, etc.).
+-   Eeshaan Ace: Graduate student in data science.
 
--   Team member 4: One sentence description of Team member 4 (e.g., year, major, etc.).
+-   Maheedhar Kolli: Graduate student in statistics and data science.
+
+-   Nandhini Anne: Graduate student in data science.
+
+-   Tushar Kant Singh: Graduate student in data science.
