--- a/presentation.qmd
+++ b/presentation.qmd
@@ -64,6 +64,108 @@ data("penguins")
 ## Understanding Time Trend for UFO sightings
 
 ```{r}
+# # Load necessary libraries
+# library(tidyverse)
+# 
+# #> Loading the Dataset 
+# 
+# #> UFO_Sightings
+# 
+# ufo_sightings <- readr::read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-06-25/ufo_sightings.csv", show_col_types = FALSE)
+# 
+# #> Data Wrangling
+# 
+# #> Exploring the data interactively
+# #View(ufo_sightings)
+# 
+# #Displaying first few entries of date_time column
+# #head(ufo_sightings$date_time)
+# 
+# #Displaying the data type of the date_time column
+# #class(ufo_sightings$date_time)
+# 
+# #> Finding Missing Data in date_time
+# #sum(is.na(ufo_sightings$date_time))
+# 
+# # Load the lubridate package
+# library(lubridate)
+# 
+# 
+# # converting character strings of date_time variable into a format that R can recognize and manipulate as date-time data.
+# ufo_sightings$date_time <- as.POSIXct(ufo_sightings$date_time, format = "%m/%d/%Y %H:%M")
+# 
+# # Extracting the hour component
+# hour_of_day <- hour(ufo_sightings$date_time)
+# 
+# # Define time ranges for each bin
+# morning_hours <- 6:11
+# afternoon_hours <- 12:17
+# evening_hours <- 18:21
+# night_hours <- c(22:23, 0:5)
+# 
+# # Function to assign time bins
+# assign_time_bin <- function(hour_of_day) {
+#   if (hour_of_day %in% morning_hours) {
+#     return("Morning")
+#   } else if (hour_of_day %in% afternoon_hours) {
+#     return("Afternoon")
+#   } else if (hour_of_day %in% evening_hours) {
+#     return("Evening")
+#   } else {
+#     return("Night")
+#   }
+# }
+# 
+# # Create a new variable representing the time of day bins
+# ufo_sightings$time_of_day <- sapply(hour_of_day, assign_time_bin)
+# 
+# # Output the time_of_day variable
+# #ufo_sightings$time_of_day
+# 
+# # Displaying date_time and time_of_day variables of ufo_sightings dataframe side by side
+# # View(ufo_sightings[, c("date_time", "time_of_day")])
+# 
+# # Write the dataframe to a CSV file
+# #write.csv(ufo_sightings, "ufo_sightings_with_time_of_day.csv", row.names = FALSE)
+# 
+# #finding out the current working directory in R to get the ufo_sightings_with_time_of_day.csv dataframe
+# #getwd()
+# 
+# library(ggplot2)
+# library(dplyr)
+# 
+# # Read the CSV file and prepare the data
+# ufo_data <- read.csv("ufo_sightings_with_time_of_day.csv")
+# 
+# # Convert time_of_day to a factor with specified order
+# ufo_data$time_of_day <- factor(ufo_data$time_of_day, levels = c("Morning", "Afternoon", "Evening", "Night"))
+# 
+# # Group the data by time_of_day and summarize to calculate count of sightings
+# ufo_summary <- ufo_data %>%
+#   group_by(time_of_day) %>%
+#   summarize(count = n())
+# 
+# # Create the plot
+# ggplot(ufo_summary, aes(x = time_of_day, y = count, fill = count)) +
+#   geom_bar(stat = "identity") +
+#   scale_fill_gradient(low = "lightblue", high = "darkblue") +  # Use a gradient scale from light blue to dark blue
+#   geom_text(aes(label = count), vjust = -0.5, color = "black") +
+#   theme_minimal() +
+#   labs(title = "UFO Sightings Count by Time of Day",
+#        x = "Time of Day",
+#        y = "Count") +
+#   theme(plot.background = element_rect(fill = "transparent", color = NA),
+#         panel.background = element_rect(fill = "transparent", color = NA),
+#         panel.grid.major = element_line(color = "gray", size = 0.5),  # Add major grid lines
+#         panel.grid.minor = element_blank(),
+#         axis.line = element_line(color = "black"),
+#         axis.text = element_text(color = "black"),
+#         axis.title = element_text(color = "black"),
+#         plot.title = element_text(hjust = 0.5, size = 20, color = "black"))
+```
+
+```{r}
+suppressWarnings({
 # Load necessary libraries
 library(tidyverse)
 
@@ -162,6 +264,8 @@ ggplot(ufo_summary, aes(x = time_of_day, y = count, fill = count)) +
         axis.text = element_text(color = "black"),
         axis.title = element_text(color = "black"),
         plot.title = element_text(hjust = 0.5, size = 20, color = "black"))
+
+})
 ```
 
 ## Observations from the UFO Sightings Count Plot by Time of Day
