Q1: Visualization, Heat map and choropleth map

--- a/index.qmd
+++ b/index.qmd
@@ -19,6 +19,83 @@ Add project abstract here.
 ### Approach
 
 ### Analysis
+```{r}
+library(tidyverse)
+
+#> Loading the Dataset 
+
+#> UFO_Sightings
+
+
+ufo_sightings <- readr::read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-06-25/ufo_sightings.csv", show_col_types = FALSE)
+
+summary(ufo_sightings)
+
+```
+Data Cleaning: First, we'll ensure that the dataset is clean, with no missing or invalid values that could affect our analysis.
+
+Descriptive Statistics: We'll calculate summary statistics such as the mean, median, and standard deviation of the number of sightings globally to understand the distribution.
+
+Geographical Visualization: Using latitude, longitude, and state data, we'll create a heatmap and choropleth map to visualize the global distribution of UFO sightings. This will help identify geographical hotspots and trends.
+
+Spatial Analysis: We'll perform spatial clustering using algorithms like K-means to identify regions with a high concentration of sightings. Additionally, we'll assess spatial autocorrelation to determine if there are spatial patterns in the distribution of sightings.
+
+```{r}
+
+library(ggplot2)
+library(dplyr)
+
+# Read the data
+ufo_sightings <- readr::read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-06-25/ufo_sightings.csv")
+
+# Data Cleaning
+ufo_sightings_clean <- ufo_sightings %>%
+  filter(!is.na(latitude), !is.na(longitude)) # Remove rows with missing latitude or longitude
+
+# Create Heatmap
+ggplot(ufo_sightings_clean, aes(x = longitude, y = latitude)) +
+  geom_bin2d(bins = 50) + # Adjust bins for resolution
+  scale_fill_gradient(name = "Frequency", low = "blue", high = "red") +
+  labs(title = "Global Distribution of UFO Sightings") +
+  theme_minimal()
+
+```
+This heatmap of UFO sightings worldwide, where each bin represents a certain area on the map, and the color intensity represents the frequency of sightings in that area. This visualization will help us identify regions with higher concentrations of UFO sightings. In the above Heatmap, we can tell most of the sightings are around the USA region and little over East Europe, the frequency is not distributed around as expected, the entire map is below 2000 sightings and UAS having higher than 2000.
+This suggests that while UFO sightings are reported worldwide, they remain rare events. Factors such as population density, cultural beliefs, and reporting biases likely contribute to the observed distribution patterns. Further exploration of these factors is necessary to better understand the underlying reasons for the observed variations in UFO sighting frequencies.
+
+
+```{r}
+# Load necessary libraries
+library(ggplot2)
+library(dplyr)
+
+# Read the UFO sightings data
+ufo_sightings <- readr::read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-06-25/ufo_sightings.csv")
+
+# Data Cleaning
+ufo_sightings_clean <- ufo_sightings %>%
+  filter(!is.na(state))
+
+# Count sightings by country
+sightings_by_country <- ufo_sightings_clean %>%
+  count(country)
+
+# Read world map data from ggplot2
+world_map <- map_data("world")
+
+# Merge with sightings data
+world_map_with_sightings <- left_join(world_map, sightings_by_country, by = c("region" = "country"))
+
+# Create Choropleth Map with individual sightings as points
+ggplot() +
+  geom_polygon(data = world_map_with_sightings, aes(x = long, y = lat, group = group, fill = n), color = "black") +
+  geom_point(data = ufo_sightings_clean, aes(x = longitude, y = latitude), color = "red", alpha = 0.3) +
+  labs(title = "Global Distribution of UFO Sightings by Country") +
+  theme_minimal()
+
+```
+This graph overlays the individual UFO sightings as red points on top of the choropleth map, allowing you to see both the country-level distribution and the specific locations of sightings. This along side the heatmap will give a better understanding where the freaquency and distribution of UFO sightings take place.
+
 
 ### Discussion
 
