--- a/index.qmd
+++ b/index.qmd
@@ -122,8 +122,17 @@ print(choropleth_map)
 
 This graph overlays the individual UFO sightings as red points on top of the choropleth map, allowing you to see both the country-level distribution and the specific locations of sightings. This along side the heatmap will give a better understanding where the freaquency and distribution of UFO sightings take place.
 
-s
 ### Discussion
+Analysis of the heat map and choropleth map shows most UFO sightings occur in the USA, especially in the West Bay area. This region has more sightings compared to others. While most sightings are in the West Bay, some are also seen in the northern and eastern USA. This suggests certain areas have more UFO activity.
+
+Factors that can affect:
+
+Population Density Influence: Higher population densities in the USA contribute to more reported UFO sightings, as there are more observers to witness and report such phenomena.
+
+Cultural Impact: The USA's rich history of UFO-related media, including movies and TV shows, may influence public perception and reporting behavior, leading to increased awareness and reporting of UFO sightings.
+
+Military Presence and Experimental Technology: The presence of military installations in certain regions, coupled with the testing of experimental aircraft or other technology, may result in misidentifications and increased UFO sightings.
+
 
 ## Question 2: Is there any specific time of the day when UFO sighting are more prevalent?
 
