--- a/index.qmd
+++ b/index.qmd
@@ -30,8 +30,6 @@ library(tidyverse)
 
 ufo_sightings <- readr::read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-06-25/ufo_sightings.csv", show_col_types = FALSE)
 
-summary(ufo_sightings)
-
 ```
 
 Data Cleaning: First, we'll ensure that the dataset is clean, with no missing or invalid values that could affect our analysis.
@@ -161,81 +159,49 @@ pacman::p_load(tidyverse,
                leaflet)
 ```
 
-```{r echo=FALSE, warning=FALSE, error=FALSE, message=FALSE}
-```
-
 ```{r}
-# Load necessary libraries
+library(ggplot2)
+library(png)
 library(tidyverse)
-
-#> Loading the Dataset 
-
-#> UFO_Sightings
-
+library(lubridate)
+library(viridis)
+library(png)
+# Read the data
 ufo_sightings <- readr::read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-06-25/ufo_sightings.csv", show_col_types = FALSE)
 
-#> Data Wrangling
-
-#> Exploring the data interactively
-#View(ufo_sightings)
-
-#Displaying first few entries of date_time column
-#head(ufo_sightings$date_time)
-
-#Displaying the data type of the date_time column
-#class(ufo_sightings$date_time)
-
-#> Finding Missing Data in date_time
-#sum(is.na(ufo_sightings$date_time))
-
-# Load the lubridate package
-library(lubridate)
-
-
-# converting character strings of date_time variable into a format that R can recognize and manipulate as date-time data.
+# Convert character strings of date_time variable into POSIXct format
 ufo_sightings$date_time <- as.POSIXct(ufo_sightings$date_time, format = "%m/%d/%Y %H:%M")
 
-# Extracting the hour component
+# Extract the hour component
 hour_of_day <- hour(ufo_sightings$date_time)
 
-# Define time ranges for each bin
-morning_hours <- 6:11
-afternoon_hours <- 12:17
-evening_hours <- 18:21
-night_hours <- c(22:23, 0:5)
+# Create the polar bar plot
+bar_plot_polar <- ggplot(hour_frequency_df, aes(x = Hour, y = Frequency)) +
+  geom_bar(stat = "identity", fill = "steelblue") +
+  guides(fill = "none") +
+  labs(title = "UFO Sightings Frequency by Hour",
+       x = "Hour of Day",
+       y = NULL) +
+  theme_minimal() +
+  theme(axis.text.y = element_blank(),
+        axis.line.y = element_blank(),
+        axis.ticks = element_blank(), 
+        panel.grid = element_blank())  +
+  coord_polar(start = -pi/1.45)
 
-# Function to assign time bins
-assign_time_bin <- function(hour_of_day) {
-  if (hour_of_day %in% morning_hours) {
-    return("Morning")
-  } else if (hour_of_day %in% afternoon_hours) {
-    return("Afternoon")
-  } else if (hour_of_day %in% evening_hours) {
-    return("Evening")
-  } else {
-    return("Night")
-  }
-}
+##################
 
-# Create a new variable representing the time of day bins
-ufo_sightings$time_of_day <- sapply(hour_of_day, assign_time_bin)
+img <- readPNG("images/q2Clock.png")
+ger <- grid::rasterGrob(img, interpolate=TRUE)
 
-# Output the time_of_day variable
-#ufo_sightings$time_of_day
+library(cowplot)
 
-# Displaying date_time and time_of_day variables of ufo_sightings dataframe side by side
-# View(ufo_sightings[, c("date_time", "time_of_day")])
+coord_plot <- ggdraw(bar_plot_polar)
 
-# Write the dataframe to a CSV file
-#write.csv(ufo_sightings, "ufo_sightings_with_time_of_day.csv", row.names = FALSE)
-
-#finding out the current working directory in R to get the ufo_sightings_with_time_of_day.csv dataframe
-#getwd()
-
-# Plotting Time Trend for UFO sightings
-
-
+coord_plot + draw_grob(ger, 0.168, 0.18, 0.65, 0.65) + 
+  draw_plot(bar_plot_polar)
 ```
+
 
 ```{r}
 suppressWarnings({
@@ -248,20 +214,6 @@ library(tidyverse)
 
 ufo_sightings <- readr::read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-06-25/ufo_sightings.csv", show_col_types = FALSE)
 
-#> Data Wrangling
-
-#> Exploring the data interactively
-#View(ufo_sightings)
-
-#Displaying first few entries of date_time column
-#head(ufo_sightings$date_time)
-
-#Displaying the data type of the date_time column
-#class(ufo_sightings$date_time)
-
-#> Finding Missing Data in date_time
-#sum(is.na(ufo_sightings$date_time))
-
 # Load the lubridate package
 library(lubridate)
 
@@ -291,20 +243,6 @@ assign_time_bin <- function(hour_of_day) {
   }
 }
 
-# Create a new variable representing the time of day bins
-ufo_sightings$time_of_day <- sapply(hour_of_day, assign_time_bin)
-
-# Output the time_of_day variable
-#ufo_sightings$time_of_day
-
-# Displaying date_time and time_of_day variables of ufo_sightings dataframe side by side
-# View(ufo_sightings[, c("date_time", "time_of_day")])
-
-# Write the dataframe to a CSV file
-#write.csv(ufo_sightings, "ufo_sightings_with_time_of_day.csv", row.names = FALSE)
-
-#finding out the current working directory in R to get the ufo_sightings_with_time_of_day.csv dataframe
-#getwd()
 
 library(ggplot2)
 library(dplyr)
