--- a/presentation.qmd
+++ b/presentation.qmd
@@ -146,6 +146,50 @@ USA
 -   This investigation can provide valuable insights into the temporal aspects of UFO sightings, potentially revealing patterns that could be linked to environmental conditions, human behavior, or other factors. \## Understanding Time Trend for UFO sightings
 
 ```{r}
+library(ggplot2)
+library(png)
+library(tidyverse)
+library(lubridate)
+library(viridis)
+library(png)
+# Read the data
+ufo_sightings <- readr::read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-06-25/ufo_sightings.csv", show_col_types = FALSE)
+
+# Convert character strings of date_time variable into POSIXct format
+ufo_sightings$date_time <- as.POSIXct(ufo_sightings$date_time, format = "%m/%d/%Y %H:%M")
+
+# Extract the hour component
+hour_of_day <- hour(ufo_sightings$date_time)
+
+# Create the polar bar plot
+bar_plot_polar <- ggplot(hour_frequency_df, aes(x = Hour, y = Frequency)) +
+  geom_bar(stat = "identity", fill = "steelblue") +
+  guides(fill = "none") +
+  labs(title = "UFO Sightings Frequency by Hour",
+       x = "24 Hour CLOCK",
+       y = NULL) +
+  theme_minimal() +
+  theme(axis.text.y = element_blank(),
+        axis.line.y = element_blank(),
+        axis.ticks = element_blank(), 
+        panel.grid = element_blank())  +
+  coord_polar(start = -pi/1.45)
+
+##################
+
+img <- readPNG("images/q2Clock.png")
+ger <- grid::rasterGrob(img, interpolate=TRUE)
+
+library(cowplot)
+
+coord_plot <- ggdraw(bar_plot_polar)
+
+coord_plot + draw_grob(ger, 0.168, 0.18, 0.65, 0.65) + 
+  draw_plot(bar_plot_polar)
+
+```
+
+```{r}
 suppressWarnings({
 # Load necessary libraries
 library(tidyverse)
