--- a/index.qmd
+++ b/index.qmd
@@ -166,7 +166,7 @@ bar_plot_polar <- ggplot(hour_frequency_df, aes(x = Hour, y = Frequency)) +
   theme(axis.text.y = element_blank(),
         axis.line.y = element_blank(),
         axis.ticks = element_blank(), 
-        panel.grid = element_blank())  +
+        panel.grid.major.y = element_blank())  + # Remove vertical grid lines
   coord_polar(start = -pi/1.45)
 
 ##################
